objects/VisitOps__VisitBundle__c.object
<CustomObject>
    <description>This is a junction object between Opportunity and Visit</description>
    <fields>
        <fullName>VisitOps__Account__c</fullName>
        <description>This is created for temporary reporting purpose</description>
        <formula>VisitOps__Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Amount__c</fullName>
        <description>This is created for temporary reporting purpose</description>
        <formula>VisitOps__Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c   )</formula>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This stores the attendee who was the recipient of decision survey for a related opportunity.</description>
        <label>Decision Survey Recipient</label>
        <referenceTo>VisitOps__Attendee__c</referenceTo>
        <relationshipLabel>Visit Bundles</relationshipLabel>
        <relationshipName>Visit_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__ClassificationFormula__c</fullName>
        <formula>TEXT(VisitOps__Visit__r.VisitOps__Classification__c)</formula>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Close_Date__c</fullName>
        <description>This is created for temporary reporting purpose</description>
        <formula>VisitOps__Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Decision_Survey_Recipient_Name__c</fullName>
        <formula>VisitOps__Attendee__r.VisitOps__Attendee_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Survey Recipient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c   )</formula>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__LineOfBusinessFormula__c</fullName>
        <description>This field is created for Report purpose</description>
        <formula>TEXT(VisitOps__Visit__r.VisitOps__Line_of_Business__c)</formula>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Location__r.Name</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Main_Competitors__c</fullName>
        <description>This is created for temporary reporting purpose</description>
        <formula>VisitOps__Opportunity__r.VisitOps__MainCompetitors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Competitors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Objective_for_this_Opportunity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the visit objectives for this opportunity.  Used on Visit Detail and the Visit Package.</inlineHelpText>
        <label>Objective for this Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displays the Salesforce Opportunity that is connected to the visit (if any).</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>VisitBundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Opportunity_added_after_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will gets checked from Briefing report if user has selected opportunity that gets created after Visit</description>
        <label>Opportunity added after Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Potential_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__SF_Opportunity_ID__c</fullName>
        <formula>VisitOps__Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Send_Notification_to_Visit_Team_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Notification to Visit Team Owner upon closure of opportunity</description>
        <label>Send Notification to Visit Team Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked to invoke workflow email alert to send decision survey to an attendee</description>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Stage__c</fullName>
        <description>This is created for temporary reporting purpose</description>
        <formula>TEXT( VisitOps__Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Sum_of_Amount_unique__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Amount (unique)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__SurveyRecipientEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether Decision survey is sent to attendee</description>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__VB_CloseDateAtTimeOfVisit__c</fullName>
        <description>Close date at the time the visit occurred</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays close date from Opportunity record (if any) or web form submissions. Updates until the arrival date of the visit occurs.</inlineHelpText>
        <label>Close Date at time of visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__VB_CompanyName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the Account name from Opportunity record (if any) or web form submissions.</inlineHelpText>
        <label>Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__VB_OppAmountAtTimeOfVisit__c</fullName>
        <inlineHelpText>Displays amount from Opportunity record (if any) or web form submissions. Updates until the arrival date of the visit occurs.</inlineHelpText>
        <label>Opportunity Amount at time of visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__VB_OppAmount__c</fullName>
        <inlineHelpText>Displays the Opportunity amount from Opportunity record (if any) or web form submissions.</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__VB_OppCloseDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the Opportunity close date from Opportunity record (if any) or web form submissions.</inlineHelpText>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__VB_OppMainCompetitors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the Opportunity main competitors from Opportunity record (if any) or web form submissions.</inlineHelpText>
        <label>Opportunity Main Competitors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__VB_OppName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the Opportunity name from Opportunity record (if any) or web form submissions.</inlineHelpText>
        <label>Opportunity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__VB_OppSalesStage__c</fullName>
        <inlineHelpText>Displays the Opportunity stage from Opportunity record (if any) or web form submissions.</inlineHelpText>
        <label>Opportunity Sales Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chance of Occurring</fullName>
                </value>
                <value>
                    <fullName>Change Cancelled</fullName>
                </value>
                <value>
                    <fullName>Change Confirmed</fullName>
                </value>
                <value>
                    <fullName>Closed Dead</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Customer Termed</fullName>
                </value>
                <value>
                    <fullName>DTQ</fullName>
                </value>
                <value>
                    <fullName>DTQ by Sales</fullName>
                </value>
                <value>
                    <fullName>Finalist</fullName>
                </value>
                <value>
                    <fullName>ID. Decision Makers</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Jeopardy</fullName>
                </value>
                <value>
                    <fullName>Merged with Cloned Renewal</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Perception Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Quoting</fullName>
                </value>
                <value>
                    <fullName>Renewal Finalized</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Submitted to Customer</fullName>
                </value>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Verbal Commitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__VB_SalesStageAtTimeOfVisit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays sales stage from Opportunity record (if any) or web form submissions. Updates until the arrival date of the visit occurs.</inlineHelpText>
        <label>Sales Stage at time of visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitArrivalDateTime__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__ArrivalDateTime__c</formula>
        <label>Visit Arrival Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitArrivalDateandTimeLocationTZ__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Arrival Date and Time(Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitDepartureDateTime__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__DepartureDateTime__c</formula>
        <label>Visit Departure Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitDepartureDateandTimeLocationTZ__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c</formula>
        <label>Visit Departure Date and Time(Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitManager__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitManagerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VisitManager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitNameFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitName__c</formula>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitOwnerFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitOwner__r.FirstName + &apos; &apos; + VisitOps__Visit__r.VisitOps__VisitOwner__r.LastName</formula>
        <label>Visit Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitTypeFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitType__r.Name</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Manager_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Status__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitStatusName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Team_Owner_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Team Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Opportunities/Visit Bundles</relationshipLabel>
        <relationshipName>VisitBundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visit Bundle</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Opportunity__c</columns>
        <columns>VisitOps__Account__c</columns>
        <columns>VisitOps__SF_Opportunity_ID__c</columns>
        <columns>VisitOps__Visit__c</columns>
        <columns>VisitOps__VisitNameFormula__c</columns>
        <columns>VisitOps__VisitArrivalDateTime__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VB{0000}</displayFormat>
        <label>Visit Bundle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>